# aoc-cli

./: CLAUDE.md  Cargo.toml  Justfile  README.md  dist-workspace.toml  flake.nix
.github/workflows/: release.yml
src/: auth.rs  cache.rs  client.rs  main.rs  session.rs
